fix missing background color for body tag

--- a/src/react/App.css
+++ b/src/react/App.css
@@ -1,4 +1,4 @@
-body {
+.app__container {
   background-color: #f4f4f4;
 }
 
